src/test/ui/issue-20616-1.stderr
error: expected one of `,`, `:`, or `>`, found `T`
  --> $DIR/issue-20616-1.rs:19:16
   |
LL | type Type_1<'a T> = &'a T; //~ error: expected one of `,`, `:`, or `>`, found `T`
   |                ^ expected one of `,`, `:`, or `>` here

error: aborting due to previous error

